--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
+  "homepage": "https://thanigaivel0721.github.io/Developer_Portfolio",
   "name": "portfolio",
   "description": "Portfolio of Thanigaivel",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "prtdeploy": "npm run build",
+    "deploy": "gh-pages -d out",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -15,10 +19,10 @@
     "@web3forms/react": "^1.1.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
-    "next": "^14.2.15",
+    "next": "^15.1.2",
     "nodemailer": "^6.9.15",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.54.1",
@@ -27,12 +31,12 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "autoprefixer": "latest",
+    "autoprefixer": "^10.4.20",
     "eslint": "latest",
     "eslint-config-next": "latest",
     "gh-pages": "^6.2.0",
-    "postcss": "latest",
+    "postcss": "^8.4.49",
     "sass": "^1.69.5",
-    "tailwindcss": "latest"
+    "tailwindcss": "^3.4.17"
   }
 }
