--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "next dev",
     "prtdeploy": "npm run build",
     "deploy": "gh-pages -d out",
-    "build": "next build",
+    "build": "next build && next export",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
