--- a/package.json
+++ b/package.json
@@ -1,14 +1,10 @@
 {
-  "homepage": "https://thanigaivel0721.github.io/Developer_Portfolio",
-  "name": "portfolio",
-  "description": "Portfolio of Thanigaivel",
-  "version": "0.1.0",
-  "private": true,
+  
   "scripts": {
     "dev": "next dev",
     "prtdeploy": "npm run build",
     "deploy": "gh-pages -d out",
-    "build": "next build && next export",
+    "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint"
@@ -19,7 +15,7 @@
     "@web3forms/react": "^1.1.3",
     "axios": "^1.6.8",
     "lottie-react": "^2.4.0",
-    "next": "^14.2.21",
+    "next": "^14.2.23",
     "nodemailer": "^6.9.15",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
