--- a/package.json
+++ b/package.json
@@ -1,38 +1,110 @@
 {
   
   "scripts": {
-    "dev": "next dev",
-    "prtdeploy": "npm run build",
-    "deploy": "gh-pages -d out",
-    "build": "next build",
-    "export": "next export",
-    "start": "next start",
-    "lint": "next lint"
+  
+    
+  "dev": "next dev",
+  
+    
+  "prtdeploy": "npm run build",
+  "type": "module",
+    
+  "deploy": "gh-pages -d out",
+  
+    
+  "build": "next build",
+  
+    
+  "export": "next export",
+  
+    
+  "start": "next start",
+  
+    
+  "lint": "next lint"
+  
   },
+  
   "dependencies": {
-    "@emailjs/browser": "^4.3.1",
-    "@next/third-parties": "^14.1.3",
-    "@web3forms/react": "^1.1.3",
-    "axios": "^1.6.8",
-    "lottie-react": "^2.4.0",
-    "next": "^14.2.23",
-    "nodemailer": "^6.9.15",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-fast-marquee": "^1.6.5",
-    "react-google-recaptcha": "^3.1.0",
-    "react-hook-form": "^7.54.1",
-    "react-icons": "^4.11.0",
-    "react-toastify": "^10.0.4",
-    "sharp": "^0.33.5"
+  
+    
+  "@emailjs/browser": "^4.3.1",
+  
+    
+  "@next/third-parties": "^14.1.3",
+  
+    
+  "@web3forms/react": "^1.1.3",
+  
+    
+  "axios": "^1.6.8",
+  
+    
+  "lottie-react": "^2.4.0",
+  
+    
+  "next": "^14.2.23",
+  
+    
+  "nodemailer": "^6.9.15",
+  
+    
+  "react": "^18.2.0",
+  
+    
+  "react-dom": "^18.2.0",
+  
+    
+  "react-fast-marquee": "^1.6.5",
+  
+    
+  "react-google-recaptcha": "^3.1.0",
+  
+    
+  "react-hook-form": "^7.54.1",
+  
+    
+  "react-icons": "^4.11.0",
+  
+    
+  "react-toastify": "^10.0.4",
+  
+    
+  "sharp": "^0.33.5"
+  
   },
+  
   "devDependencies": {
-    "autoprefixer": "^10.4.20",
-    "eslint": "latest",
-    "eslint-config-next": "latest",
-    "gh-pages": "^6.2.0",
-    "postcss": "^8.4.49",
-    "sass": "^1.83.0",
-    "tailwindcss": "^3.4.17"
+  
+    
+  "@eslint/js": "^9.19.0",
+  
+    
+  "@next/eslint-plugin-next": "^15.1.6",
+  
+    
+  "autoprefixer": "^10.4.20",
+  
+    
+  "eslint": "latest",
+  
+    
+  "eslint-config-next": "latest",
+  
+    
+  "gh-pages": "^6.2.0",
+  
+    
+  "globals": "^15.14.0",
+  
+    
+  "postcss": "^8.4.49",
+  
+    
+  "sass": "^1.83.0",
+  
+    
+  "tailwindcss": "^3.4.17"
+  
   }
 }
